infra/kubernetes/deployment-homolog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend-homolog
  namespace: central-oondemand-homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend-homolog
  template:
    metadata:
      labels:
        app: auth-backend-homolog
    spec:
      containers:
        - name: auth-backend-homolog-container
          image: ghcr.io/oondemand/auth-backend:${IMAGE_TAG}-homolog
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "2048Mi"
              cpu: "2"
