infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meus-apps-backend
  namespace: central-oondemand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meus-apps-backend
  template:
    metadata:
      labels:
        app: meus-apps-backend
    spec:
      containers:
        - name: meus-apps-backend-container
          image: ghcr.io/oondemand/meus-apps-backend:${IMAGE_TAG}
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "2048Mi"
              cpu: "2"
