infra/kubernetes/service-homolog.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-oondemand-homolog-service
  namespace: central-oondemand-homolog
spec:
  type: NodePort
  selector:
    app: central-oondemand-homolog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
