infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-oondemand-backend-service
  namespace: central-oondemand
spec:
  type: NodePort
  selector:
    app: central-oondemand-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
